12-kuber-homeworks-3.4/src/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
spec:
  selector:
    app: nginx
    version: "1.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
