12-kuber-homeworks-3.4/src/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
spec:
  selector:
    app: nginx
    version: "2.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
